--- a/LabelGenerator/views/layout.pug
+++ b/LabelGenerator/views/layout.pug
@@ -15,6 +15,8 @@ html
     nav.main-header.navbar.navbar-expand.ml-0.navbar-white.navbar-light.navbar-toggler
       ul.navbar-nav
         li.nav-item
+          a.nav-link(href="/") Return Label
+        li.nav-item
           a.nav-link(href="voucher") Voucher Label
         li.nav-item 
           a.nav-link(href="bumpdown") Bumpdown Label
