--- a/LabelGenerator/views/layout.pug
+++ b/LabelGenerator/views/layout.pug
@@ -22,6 +22,8 @@ html
           a.nav-link(href="bumpdown") Bumpdown Label
         li.nav-item
           a.nav-link(href="assignment") Device Assignment Label
+        li.nav-item
+          a.nav-link(href="new") New Device Label
 
     block content
     
