proof of concept for label on backend - need to unescape xml

--- a/LabelGenerator/views/voucher.pug
+++ b/LabelGenerator/views/voucher.pug
@@ -6,7 +6,9 @@ include mixins/deviceInfoCard
 block content
   script(type="module" src="javascripts/voucher.js")
   h1.text-center= title
-
+  script.
+    //var text = "#{title}"
+    let text2 = '#{label}';
   .row
     .col
       +card('Device Information').w-100
