--- a/LabelGenerator/views/voucher.pug
+++ b/LabelGenerator/views/voucher.pug
@@ -7,8 +7,8 @@ block content
   script(type="module" src="javascripts/voucher.js")
   h1.text-center= title
   script.
-    //var text = "#{title}"
-    let text2 = '#{label}';
+    let deviceCard = '!{deviceCard}';
+    let text2 = '!{label}';
   .row
     .col
       +card('Device Information').w-100
