code cleanup, remove development logs

--- a/LabelGenerator/views/voucher.pug
+++ b/LabelGenerator/views/voucher.pug
@@ -7,8 +7,8 @@ block content
   script(type="module" src="javascripts/voucher.js")
   h1.text-center= title
   script.
-    let deviceCard = '!{deviceCard}';
-    let text2 = '!{label}';
+    let deviceIDLabel = '!{deviceCard}';
+    let voucherLabel = '!{label}';
   .row
     .col
       +card('Device Information').w-100
