--- a/LabelGenerator/views/bumpdown.pug
+++ b/LabelGenerator/views/bumpdown.pug
@@ -4,6 +4,8 @@ include mixins/printingCard
 block content
   script(type="module" src="javascripts/bumpdown.js")
   h1.text-center= title
+  script.
+    let bumpdownLabel = '!{label}';
   .row
     .col
       +card('Device Information').w-100
