--- a/LabelGenerator/views/index.pug
+++ b/LabelGenerator/views/index.pug
@@ -5,6 +5,8 @@ include mixins/printingCard
 block content
   script(type="module", src="javascripts/return.js")
   h1.text-center= title
+  script.
+    let returnLabel = '!{label}';
   .row
     .col
       +card('Returned Information')
@@ -16,9 +18,6 @@ block content
             .form-group
               label(for="name") Faculty/Staff Name
               input#name.form-control(type="text",name="name")
-            //- .form-group 
-              label(for="reason2") Return Reason 
-              input#reason2.form-control(type="text",name="reason")
             .form-group
               label(for="reason") Return Reason
               select#reason.form-control
@@ -36,5 +35,3 @@ block content
     .col
       +card('Print Controls', 'info')
         +printingCard
-
-        //- name,AssetTag,returnReason,ticketNumber
